--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <!-- Fonts (Poppins) -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <!-- Phosphor Icons (for clean, modern icons) -->
+    <!----- Phosphor Icons (for clean, modern icons) ----->
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <script>
