--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 
   <div class="w-full max-w-md bg-white p-8 rounded-2xl shadow-xl border border-gray-200">
     <h2 class="text-3xl font-bold text-center  text-gray-800">Create Account </h2>
-     <h2 class="text-xl font-bold text-center mb-6 text-[#2dd2a9]">Saksham Rojgar</h2>
+     <!-- <h2 class="text-xl font-bold text-center mb-6 text-[#2dd2a9]">Saksham Rojgar</h2> -->
 
     <!-- form -->
     <form>
