--- a/register.html
+++ b/register.html
@@ -62,6 +62,7 @@
       </div>
 
     
+      <!-- register button  -->
       <button 
         type="submit"
         class="w-full bg-[#2dd2a9] text-white py-2 rounded-lg text-lg font-semibold hover:bg-[#2dd287] transition"
